# project-nasa-mission-intelligence-starter

./: .gitignore  README.md  bootstrap.py  chat.py  embedding_pipeline.py  llm_client.py  main.py  pyproject.toml  rag_client.py  ragas_evaluator.py  requirements.txt  rubic.md  run_evaluation_dataset.py  test_questions.json
provider/: builder_registry.py  model.py  protocol.py
provider/plugins/: chromadb_provider.py  error.py  openai_provider.py  raga_provider.py  shared.py
tests/: test_integration.py
