[project]
name = "project-nasa-mission-intelligence-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "chromadb==1.5.7",
    "en-core-web-sm",
    "langchain>=1.3.12",
    "langchain-community==0.4.0",
    "langchain-openai==1.1.13",
    "nest-asyncio>=1.6.0",
    "openai==2.31.0",
    "pandas==3.0.2",
    "python-dotenv>=1.0.0",
    "ragas==0.4.3",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.6.0",
    "spacy>=3.8.0,<3.9.0",
    "streamlit==1.56.0",
]

[dependency-groups]
dev = [
    "poetry-plugin-export>=1.10.0",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "uuid>=1.30",
]

[tool.ruff]
# Override the strict PEP 8 maximum line length constraint of 79 to 120 that is used in many organizations (Default is 88)
line-length = 120

[tool.ruff.lint]
# Select rules for pycodestyle errors (E), warnings (W), and Pyflakes (F)
select = ["E", "W", "F"]

# Optional: Ignore specific rules if they conflict with your workflow
# ignore = ["E501"] # Example: Ignore line length limits if needed

[tool.ruff.format]
# Ensure spacing over tabs for proper PEP 8 layouts
indent-style = "space"
quote-style = "double"

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz" }

